deploy: e7a2ef7190683f6072c0a64c1cd95532c20f4f7b

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -474,16 +474,21 @@ contributors, 2024b).</p>
 <div class="column" width="50%">
 <p><strong>dormant rot</strong>: the software in question is not changed, but as the
 environment evolves, it eventually becomes dysfunctional</p>
+<div class="fragment mt-3" data-fragment-index="2">
+<img src="figures/publicdomainvectors/floppy-disks.svg" width="200" />
 </div>
-<div class="column fragment" width="50%">
+</div>
+<div class="column" width="50%">
+<div class="fragment" data-fragment-index="1">
 <figure>
-<img src="figures/borrowed/muni_metro.jpg"
+<img src="figures/borrowed/muni_metro.jpg" width="450"
 alt="Muni metro San Francisco photo by Albert CC BY-NC 2.0" />
 <figcaption aria-hidden="true">Muni metro San Francisco<br>photo by <a
 href="https://www.flickr.com/photos/24208255@N07/2751036689/">Albert</a>
 <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC
 2.0</a></figcaption>
 </figure>
+</div>
 </div>
 </div>
 <div class="notes">
