--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -613,15 +613,21 @@ class="citation" data-cites="enwiki:1236668404">[3]</span>.</p>
 <p><strong>dormant rot</strong>: the software in question is not
 changed, but as the environment evolves, it eventually becomes
 dysfunctional</p>
-</div><div class="column fragment" style="width:50%;">
+<div class="fragment mt-3" data-fragment-index="2">
+<p><img data-src="figures/publicdomainvectors/floppy-disks.svg"
+width="200" /></p>
+</div>
+</div><div class="column" style="width:50%;">
+<div class="fragment" data-fragment-index="1">
 <figure>
-<img data-src="figures/borrowed/muni_metro.jpg"
+<img data-src="figures/borrowed/muni_metro.jpg" width="450"
 alt="Muni metro San Francisco photo by Albert CC BY-NC 2.0" />
 <figcaption aria-hidden="true">Muni metro San Francisco<br>photo by <a
 href="https://www.flickr.com/photos/24208255@N07/2751036689/">Albert</a>
 <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC
 2.0</a></figcaption>
 </figure>
+</div>
 </div>
 </div>
 <aside class="notes">
