deploy: 872101e0f5afa180e8e2a0902388549333cf8f50

--- a/print.html
+++ b/print.html
@@ -443,6 +443,9 @@ by Steven To</li>
 <li><a href="https://homes.cs.washington.edu/~mernst/advice/version-control.html">Version control concepts and best
 practices</a> -
 by Michael Ernst</li>
+<li><a href="https://martinfowler.com/articles/continuousIntegration.html">Continuous
+Integration</a> -
+by Martin Fowler</li>
 <li><a href="https://roadmap.sh/devops/principles">11 DevOps Principles and Practices to Master: Pro
 Advice</a> - by Fernando Doglio</li>
 </ul>
