deploy: b36e7a16d9abd3093a02b3d27de7634f5f5917b2

--- a/print.html
+++ b/print.html
@@ -433,7 +433,7 @@ by James O Coplien</li>
 <h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_week10.html">week 10 summary</a></li>
-<li>automatization</li>
+<li><a href="lectures//software-engineering/slides/16_automatization.html">automatization</a></li>
 </ol>
 <h3 id="readings-9"><a class="header" href="#readings-9">readings</a></h3>
 <ul>
