deploy: 98f66abc7f301e41375e28c62965d51528d5ef9c

--- a/print.html
+++ b/print.html
@@ -372,6 +372,8 @@ guide</a> -
 by Louise Bruton</li>
 <li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
 Prototypes</a></li>
+<li><a href="https://balsamiq.com/learn/">Practical training for creating more usable
+products</a> - by balsamiq</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
@@ -6659,6 +6661,17 @@ https://www.uxdesigninstitute.com/blog/what-is-wireframing/
 https://www.interaction-design.org/literature/topics/prototypes
 </a>.</p>
 </div>
+</div>
+<div class="mt-5">
+<p><span class="text-size-2">more about UX design</span></p>
+<ul>
+<li><a href="https://blog.hubspot.com/website/wireframe-map">How to Create a Wireframe
+Map</a> - by Maddy Osman</li>
+<li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
+Prototypes</a></li>
+<li><a href="https://balsamiq.com/learn/">Practical training for creating more usable
+products</a> - by balsamiq</li>
+</ul>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="software-design-and-architecture-stack-1"><a class="header" href="#software-design-and-architecture-stack-1">software design and architecture stack</a></h1>
 <figure>
