--- a/slides/11_wireframing.html
+++ b/slides/11_wireframing.html
@@ -318,6 +318,18 @@ prototypes?”</span> <a href="
 </a>, 17-Oct-2019.</div>
 </div>
 </div>
+<div class="mt-5">
+<p><span class="text-size-2">more about UX design</span></p>
+<ul>
+<li><a href="https://blog.hubspot.com/website/wireframe-map">How to
+Create a Wireframe Map</a> - by Maddy Osman</li>
+<li><a
+href="https://www.interaction-design.org/literature/topics/prototypes">UI
+Prototypes</a></li>
+<li><a href="https://balsamiq.com/learn/">Practical training for
+creating more usable products</a> - by balsamiq</li>
+</ul>
+</div>
 </section>
     </div>
   </div>
