--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -940,8 +940,7 @@ href="https://lkml.iu.edu/hypermail/linux/kernel/2210.0/00685.html">Linux
 Torvalds</a></span></li>
 </ul></li>
 <li>since version 3, TeX has used an idiosyncratic version numbering
-system <span class="citation"
-data-cites="enwiki:1253226188"><strong>enwiki:1253226188?</strong></span>
+system <span class="citation" data-cites="enwiki:1253226188">[8]</span>
 <ul>
 <li><span class="text-smaller">where updates have been indicated by
 adding an extra digit at the end of the decimal, so that the version
@@ -1153,6 +1152,14 @@ href="
                     " class="uri">
                    https://www.brightdevelopers.com/the-cost-of-interruption-for-software-developers
 </a>, 03-May-2018.</div>
+</div>
+<div id="ref-enwiki:1253226188" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[8] </div><div
+class="csl-right-inline">Wikipedia contributors, <span>“TeX —
+<span>Wikipedia</span><span>,</span> the free encyclopedia.”</span> <a
+href="https://en.wikipedia.org/w/index.php?title=TeX&amp;oldid=1253226188"
+class="uri">https://en.wikipedia.org/w/index.php?title=TeX&amp;oldid=1253226188</a>,
+2024.</div>
 </div>
 </div>
 </section>
