--- a/lectures/11_wireframing.html
+++ b/lectures/11_wireframing.html
@@ -380,6 +380,17 @@ https://www.interaction-design.org/literature/topics/prototypes
 </a>.</p>
 </div>
 </div>
+<div class="mt-5">
+<p><span class="text-size-2">more about UX design</span></p>
+<ul>
+<li><a href="https://blog.hubspot.com/website/wireframe-map">How to Create a Wireframe
+Map</a> - by Maddy Osman</li>
+<li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
+Prototypes</a></li>
+<li><a href="https://balsamiq.com/learn/">Practical training for creating more usable
+products</a> - by balsamiq</li>
+</ul>
+</div>
 
                     </main>
 
