--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -371,6 +371,8 @@ guide</a> -
 by Louise Bruton</li>
 <li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
 Prototypes</a></li>
+<li><a href="https://balsamiq.com/learn/">Practical training for creating more usable
+products</a> - by balsamiq</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
