deploy: d0144efbf35b7d673efb2702eb9a92a31c5fcdd2

--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -447,7 +447,10 @@ previous build failed, preventing unnecessary noise.</p>
 <ul>
 <li>traditionally called build script</li>
 <li>responsible not only for building the software</li>
-<li>but also for running tests, generating reports</li>
+<li>but also for running tests, generating reports
+<ul>
+<li>code coverage</li>
+</ul></li>
 <li>and even for packaging the software</li>
 </ul>
 </div><div class="column" style="width:35%;">
