deploy: d60c16f6b4eaf4a48c8e82b69437b2de03dbafb1

--- a/slides/summary_full.html
+++ b/slides/summary_full.html
@@ -847,7 +847,7 @@ href="https://c4model.com/">c4model.com</a></p>
 <li><span class="text-smaller">what other software does it
 interacts</span></li>
 </ul></li>
-<li>high diagram
+<li>high level diagram
 <ul>
 <li><span class="text-smaller">technologies, protocols and other
 low-level details are not important</span></li>
