deploy: f01c384aaaf6818b778cb3d41bc3215bab9afbd0

--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -528,17 +528,30 @@ data-cites="shipp2019war">[5]</span></li>
 <section id="continuous-integration-ci"
 class="title-slide slide level1">
 <h1>continuous integration (CI)</h1>
-<!--:::::::::::: {.columns}
-::::::::: {.column width="70%"}-->
+<div class="text-smaller">
+<blockquote>
+<p>Continuous Integration is a software development practice where each
+member of a team merges their changes into a codebase together with
+their colleagues changes at least daily.</p>
+<p>– Martin Fowler <span class="citation"
+data-cites="fowler2024continuous">[6]</span></p>
+</blockquote>
+</div>
+<ul>
+<li>emerged from extreme programming</li>
+<li>considered an agile approach</li>
+<li>gives immediate feedback
+<ul>
+<li>the integration (merging) will fail if two branches are not
+compatible</li>
+<li>and build the integrated software</li>
+</ul></li>
+<li>also gives opportunity to do testing on the built software…</li>
+</ul>
+</section>
+<section id="continuous-integration" class="slide level2">
+<h2>continuous integration</h2>
 <p><img data-src="figures/ci.drawio.svg" width="625" /></p>
-<!--:::::::::
-::::::::: {.column width="30%" .text-smaller}
-- extreme programming
-- agile
-- immediate feedback
-
-:::::::::
-::::::::::::-->
 </section>
 <section id="continuous-integration-environment" class="slide level2">
 <h2>continuous integration environment</h2>
