deploy: cabecc0051f30b5317d47515399ca75a564e29f9

--- a/index.html
+++ b/index.html
@@ -473,6 +473,8 @@ by Jussi Judin</li>
 <li>a <a href="https://dev.to/scottshipp/war-of-the-git-flows-3ec2">comparison of branching
 strategies</a> - by
 Scott Shipp</li>
+<li><a href="https://snarky.ca/why-i-dont-like-semver/">Why I don’t like SemVer
+anymore</a> - by Brett Cannon</li>
 </ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
