deploy: d0205d5e346f30f61db3899a6c2bba86eeadb0bb

--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -1420,7 +1420,7 @@ schedule</figcaption>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
-<div id="refs" class="references csl-bib-body" role="list">
+<div id="refs" class="text-smaller references csl-bib-body" role="list">
 <div id="ref-ernst2012version" class="csl-entry" role="listitem">
 <div class="csl-left-margin">[1] </div><div class="csl-right-inline">M.
 Ernst, <span>“Version control concepts and best practices.”</span> <a
