deploy: 2331ab8aaac42552d1ec2a0c98e7ea16c2a67318

--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -365,8 +365,8 @@ documentation</a></p>
 <div class="column" style="width:25%;">
 <figure>
 <img data-src="figures/vcs_read.drawio.svg" width="200"
-alt="lock before read" />
-<figcaption aria-hidden="true">lock before read</figcaption>
+alt="read the same file" />
+<figcaption aria-hidden="true">read the same file</figcaption>
 </figure>
 </div><div class="column" style="width:25%;">
 <figure>
