--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -478,7 +478,7 @@ anymore</a> - by Brett Cannon</li>
 </ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
-<li>summary</li>
+<li><a href="/software-engineering/slides/summary_full.html">summary</a></li>
 </ol>
 
                     </main>
