deploy: 591524907167ddd2136fc45cc50b6735940db006

--- a/lectures/15_testing.html
+++ b/lectures/15_testing.html
@@ -720,7 +720,7 @@ class="citation" data-cites="seemann2007unit">(Seemann,
 <div class="column mt-5" width="55%">
 <ul>
 <li>write test <em>before</em> writing the tested code</li>
-<li>without the called unit the test fill fail
+<li>without the called unit the test will fail
 <ul>
 <li>the called function does not exist</li>
 </ul>
@@ -1070,7 +1070,7 @@ requires adding one test (case) at a time and then make the code pass</li>
 </ul>
 </li>
 <li>but tests are still important!</li>
-<li><span class="fragment" data-fragment-index="1">what I to do is to turn
+<li><span class="fragment" data-fragment-index="1">what I do is to turn
 experiments into tests</span></li>
 </ul>
 </div>
