--- a/slides/15_testing.html
+++ b/slides/15_testing.html
@@ -770,7 +770,7 @@ class="title-slide slide level1">
 <div class="column mt-5" style="width:55%;">
 <ul>
 <li>write test <em>before</em> writing the tested code</li>
-<li>without the called unit the test fill fail
+<li>without the called unit the test will fail
 <ul>
 <li>the called function does not exist</li>
 </ul></li>
@@ -1133,8 +1133,8 @@ pass</li>
 <li>coding kata</li>
 </ul></li>
 <li>but tests are still important!</li>
-<li><span class="fragment" data-fragment-index="1">what I to do is to
-turn experiments into tests</span></li>
+<li><span class="fragment" data-fragment-index="1">what I do is to turn
+experiments into tests</span></li>
 </ul>
 </div><div class="column text-smaller r-frame fragment"
 data-fragment-index="1" style="width:40%;">
