--- a/print.html
+++ b/print.html
@@ -480,6 +480,7 @@ anymore</a> - by Brett Cannon</li>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_full.html">summary</a></li>
+<li><a href="lectures//software-engineering/slides/mindmap.html">mindmap</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
