--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -479,6 +479,7 @@ anymore</a> - by Brett Cannon</li>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
 <li><a href="/software-engineering/slides/summary_full.html">summary</a></li>
+<li><a href="/software-engineering/slides/mindmap.html">mindmap</a></li>
 </ol>
 
                     </main>
