deploy: fdb6cc98a982c52a84044b5d7322f8ed878a373d

--- a/print.html
+++ b/print.html
@@ -283,6 +283,7 @@ depth</a></li>
 </ul>
 <h2 id="week-5"><a class="header" href="#week-5">week 5</a></h2>
 <ol>
+<li><a href="lectures//software-engineering/slides/summary_week04.html">week 4 summary</a></li>
 <li><a href="lectures//software-engineering/slides/08_patterns.html">design patterns</a></li>
 </ol>
 <h3 id="readings-4"><a class="header" href="#readings-4">readings</a></h3>
@@ -377,6 +378,7 @@ products</a> - by balsamiq</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
+<li><a href="lectures//software-engineering/slides/summary_week07.html">week 7 summary</a></li>
 <li><a href="lectures//software-engineering/slides/13_code_quality.html">code quality</a></li>
 <li><a href="lectures//software-engineering/slides/14_code_review.html">code review</a></li>
 </ol>
@@ -399,6 +401,7 @@ One)</a> - by Michael Lynch
 </ul>
 <h2 id="week-10"><a class="header" href="#week-10">week 10</a></h2>
 <ol>
+<li><a href="lectures//software-engineering/slides/summary_week09.html">week 9 summary</a></li>
 <li><a href="lectures//software-engineering/slides/15_testing.html">testing</a></li>
 </ol>
 <h3 id="readings-8"><a class="header" href="#readings-8">readings</a></h3>
