deploy: cf5a5e804ab0a769a2ffeb72c32e655d7ba39ea0

--- a/lectures/16_automatization.html
+++ b/lectures/16_automatization.html
@@ -941,17 +941,16 @@ tabulate = "^0.9.0"
 <p>GitLab also has a similar solution</p>
 </div>
 <h2 id="dependabot-example"><a class="header" href="#dependabot-example">dependabot example</a></h2>
-<figure>
-<img src="figures/dependabot.png" width="875" alt="warning on GitHub" />
-<figcaption aria-hidden="true">warning on GitHub</figcaption>
-</figure>
+<img src="figures/dependabot_details.png" width="800" />
+<div class="text-smaller mt-2">
+<div class="text-smaller">
 <pre><code>remote: Resolving deltas: 100% (5/5), completed with 4 local objects.
 remote: 
 remote: GitHub found 1 vulnerability on pintergreg/software-engineering's default branch (1 high). To find out more, visit:
 remote:      https://github.com/pintergreg/software-engineering/security/dependabot/1
 </code></pre>
-<div class="text-smaller">
-<p>command line warning during git push</p>
+</div>
+<p>command line warning after git push</p>
 </div>
 <h2 id="dependencies"><a class="header" href="#dependencies">dependencies</a></h2>
 <div class="columns">
