deploy: 49add2128f16cb694e04b380c076647a01583c32

--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@ anymore</a> - by Brett Cannon</li>
 <ol>
 <li><a href="/software-engineering/slides/summary_full.html">summary</a></li>
 <li><a href="/software-engineering/slides/mindmap.html">mindmap</a></li>
+<li><a href="/software-engineering/slides/mock_exam.html">mock exam</a></li>
 </ol>
 
                     </main>
