--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -483,6 +483,7 @@ anymore</a> - by Brett Cannon</li>
 <ol>
 <li><a href="/software-engineering/slides/summary_full.html">summary</a></li>
 <li><a href="/software-engineering/slides/mindmap.html">mindmap</a></li>
+<li><a href="/software-engineering/slides/mock_exam.html">mock exam</a></li>
 </ol>
 
                     </main>
