--- a/print.html
+++ b/print.html
@@ -484,6 +484,7 @@ anymore</a> - by Brett Cannon</li>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_full.html">summary</a></li>
 <li><a href="lectures//software-engineering/slides/mindmap.html">mindmap</a></li>
+<li><a href="lectures//software-engineering/slides/mock_exam.html">mock exam</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
