--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Page not found - handout</title>
-        <base href="/">
+        <base href="https://pintergreg.github.io/software-engineering/">
 
 
         <!-- Custom HTML head -->
