--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -161,8 +161,8 @@
                         <h1 id="software-engineering"><a class="header" href="#software-engineering">Software Engineering</a></h1>
 <h2 id="week-1"><a class="header" href="#week-1">week 1</a></h2>
 <ol>
-<li><a href="/slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="/slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="slides/01_sdlc.html">software development life cycles</a></li>
 </ol>
 <h3 id="readings"><a class="header" href="#readings">readings</a></h3>
 <ul>
@@ -183,14 +183,14 @@ Eli Perkins</li>
 </ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
-<li><a href="/slides/summary_week01.html">week 1 summary</a></li>
-<li><a href="/slides/02_scrum.html">scrum</a></li>
-<li><a href="/slides/03_kanban.html">kanban</a></li>
+<li><a href="slides/summary_week01.html">week 1 summary</a></li>
+<li><a href="slides/02_scrum.html">scrum</a></li>
+<li><a href="slides/03_kanban.html">kanban</a></li>
 </ol>
 <h3 id="readings-1"><a class="header" href="#readings-1">readings</a></h3>
 <p>scrum</p>
 <ul>
-<li><a href="/resources/2020-Scrum-Guide-US.pdf">The Scrum Guide</a></li>
+<li><a href="resources/2020-Scrum-Guide-US.pdf">The Scrum Guide</a></li>
 </ul>
 <p>zombie scrum</p>
 <ul>
@@ -201,14 +201,14 @@ Scrum</a></li>
 </ul>
 <p>kanban</p>
 <ul>
-<li><a href="/resources/Kanban-Guide-2020-12.pdf">the Kanban Guide</a></li>
+<li><a href="resources/Kanban-Guide-2020-12.pdf">the Kanban Guide</a></li>
 </ul>
 <h2 id="week-3"><a class="header" href="#week-3">week 3</a></h2>
 <ol>
-<li><a href="/slides/summary_week02.html">week 2 summary</a></li>
-<li><a href="/slides/04_requirement_analysis.html">requirement analysis</a></li>
-<li><a href="/slides/05_user_story_mapping.html">user story mapping</a></li>
-<li><a href="/slides/project.html">project assignment</a></li>
+<li><a href="slides/summary_week02.html">week 2 summary</a></li>
+<li><a href="slides/04_requirement_analysis.html">requirement analysis</a></li>
+<li><a href="slides/05_user_story_mapping.html">user story mapping</a></li>
+<li><a href="slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
@@ -242,7 +242,7 @@ by Nick Muldoon</li>
 <li><a href="https://www.nngroup.com/articles/user-story-mapping/">Mapping User Stories in
 Agile</a> - by Anna
 Kaley</li>
-<li><a href="/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
+<li><a href="resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
 <h4 id="optional"><a class="header" href="#optional">optional</a></h4>
@@ -254,9 +254,9 @@ Code</a></li>
 </ul>
 <h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
 <ol>
-<li><a href="/slides/summary_week03.html">week 3 summary</a></li>
-<li><a href="/slides/06_uml.html">UML</a></li>
-<li><a href="/slides/07_c4.html">C4</a></li>
+<li><a href="slides/summary_week03.html">week 3 summary</a></li>
+<li><a href="slides/06_uml.html">UML</a></li>
+<li><a href="slides/07_c4.html">C4</a></li>
 </ol>
 <h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
 <p>UML</p>
@@ -279,8 +279,8 @@ depth</a></li>
 </ul>
 <h2 id="week-5"><a class="header" href="#week-5">week 5</a></h2>
 <ol>
-<li><a href="/slides/summary_week04.html">week 4 summary</a></li>
-<li><a href="/slides/08_patterns.html">design patterns</a></li>
+<li><a href="slides/summary_week04.html">week 4 summary</a></li>
+<li><a href="slides/08_patterns.html">design patterns</a></li>
 </ol>
 <h3 id="readings-4"><a class="header" href="#readings-4">readings</a></h3>
 <ul>
@@ -338,9 +338,9 @@ by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
-<li><a href="/slides/summary_week05.html">week 5 summary</a></li>
-<li><a href="/slides/09_interfaces.html">interfaces</a></li>
-<li><a href="/slides/10_planning.html">implementation planning</a></li>
+<li><a href="slides/summary_week05.html">week 5 summary</a></li>
+<li><a href="slides/09_interfaces.html">interfaces</a></li>
+<li><a href="slides/10_planning.html">implementation planning</a></li>
 </ol>
 <h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
 <ul>
@@ -357,9 +357,9 @@ Example</a></li>
 </ul>
 <h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
 <ol>
-<li><a href="/slides/summary_week06.html">week 6 summary</a></li>
-<li><a href="/slides/11_wireframing.html">wireframing</a></li>
-<li><a href="/slides/12_clean_code.html">clean code</a></li>
+<li><a href="slides/summary_week06.html">week 6 summary</a></li>
+<li><a href="slides/11_wireframing.html">wireframing</a></li>
+<li><a href="slides/12_clean_code.html">clean code</a></li>
 </ol>
 <h3 id="readings-6"><a class="header" href="#readings-6">readings</a></h3>
 <ul>
@@ -373,9 +373,9 @@ products</a> - by balsamiq</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
-<li><a href="/slides/summary_week07.html">week 7 summary</a></li>
-<li><a href="/slides/13_code_quality.html">code quality</a></li>
-<li><a href="/slides/14_code_review.html">code review</a></li>
+<li><a href="slides/summary_week07.html">week 7 summary</a></li>
+<li><a href="slides/13_code_quality.html">code quality</a></li>
+<li><a href="slides/14_code_review.html">code review</a></li>
 </ol>
 <h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
 <ul>
@@ -396,8 +396,8 @@ One)</a> - by Michael Lynch
 </ul>
 <h2 id="week-10"><a class="header" href="#week-10">week 10</a></h2>
 <ol>
-<li><a href="/slides/summary_week09.html">week 9 summary</a></li>
-<li><a href="/slides/15_testing.html">testing</a></li>
+<li><a href="slides/summary_week09.html">week 9 summary</a></li>
+<li><a href="slides/15_testing.html">testing</a></li>
 </ol>
 <h3 id="readings-8"><a class="header" href="#readings-8">readings</a></h3>
 <ul>
@@ -432,8 +432,8 @@ by James O Coplien</li>
 </ul>
 <h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
 <ol>
-<li><a href="/slides/summary_week10.html">week 10 summary</a></li>
-<li><a href="/slides/16_automatization.html">automatization</a></li>
+<li><a href="slides/summary_week10.html">week 10 summary</a></li>
+<li><a href="slides/16_automatization.html">automatization</a></li>
 </ol>
 <h3 id="readings-9"><a class="header" href="#readings-9">readings</a></h3>
 <ul>
@@ -477,9 +477,9 @@ anymore</a> - by Brett Cannon</li>
 </ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
-<li><a href="/slides/summary_full.html">summary</a></li>
-<li><a href="/slides/mindmap.html">mindmap</a></li>
-<li><a href="/slides/mock_exam.html">mock exam</a></li>
+<li><a href="slides/summary_full.html">summary</a></li>
+<li><a href="slides/mindmap.html">mindmap</a></li>
+<li><a href="slides/mock_exam.html">mock exam</a></li>
 </ol>
 
                     </main>
